--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.13.2",
         "bcryptjs": "^2.4.3",
         "compression": "^1.8.1",
         "cors": "^2.8.5",
