--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@stripe/react-stripe-js": "^5.4.1",
+        "@stripe/stripe-js": "^8.6.1",
         "axios": "^1.13.2",
         "date-fns": "^2.30.0",
         "framer-motion": "^10.18.0",
