--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3",
         "multer": "^1.4.5-lts.1",
-        "nodemailer": "^6.9.7"
+        "nodemailer": "^6.9.7",
+        "stripe": "^20.1.2"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
